--- a/site/index.qmd
+++ b/site/index.qmd
@@ -9,13 +9,13 @@ The Programming Cafe is a community event organized every first Thursday of the 
 ::: {.callout-note icon=false}
 ## Next Edition
 
-- **Date:** Thursday, 2nd November
+- **Date:** Thursday, 11th January 2024
 - **Time:** 15:00-17:00
-- **Location:** 0.33D, Adminstration Building (Bestuursgebouw) Heidelberglaan 8, Utrecht Science Park
-- **Demo/Presentation:** Scheduling things
+- **Location:** Buchelius Room 6.18, University Library, Utrecht Science Park
+- **Demo/Presentation:** Git and GitHub intermediate
 
-<a href='https://www.uu.nl/en/node/132753/ics' download="Programming-Cafe">
-<button type="button" class="btn btn-primary btn-sm">Add October edition to calendar</button>
+<a href='https://www.uu.nl/en/node/133004/ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add next edition to calendar</button>
 </a>
 
 :::
