--- a/site/agenda.qmd
+++ b/site/agenda.qmd
@@ -8,7 +8,7 @@
 - **Date:** Thursday, 7th March
 - **Time:** 15:00-17:00
 - **Location:** Bucheliuszaal 6.18, University Library (Utrecht Science Park)
-- **Demo/Presentation:** Creating your own Python and R packages (by Raoul Schram and Jelle Treep)
+- **Demo/Presentation:** [Creating your own Python and R packages (by Raoul Schram and Jelle Treep)](https://utrechtuniversity.github.io/programming-cafe-presentations/presentations/2024-03-07_packaging/intro-slides.html)
 - If you are working with Python and R, undoubtedly you will have used packages (e.g. numpy, pandas, ggplot2 or tidyr). But did you know you can create your own packages? And did you know that this is not so difficult and often a good idea? In this programming cafe we discuss what a package is, when and why it is a good idea to create a packages, how to create a package and some best practices when creating packages. We will also have small tutorials for creating a simple package in R and Python yourself in the second hour of the programming cafe and experts in the room to help you!
 
 <a href='https://www.uu.nl/en/node/133008/ics' download="Programming-Cafe">
