--- a/site/index.qmd
+++ b/site/index.qmd
@@ -9,13 +9,13 @@ The Programming Cafe is a community event organized every first Thursday of the 
 ::: {.callout-note icon=false}
 ## Next Edition
 
-- **Date:** Thursday, 7th March 2024
+- **Date:** Thursday, 4th April 2024
 - **Time:** 15:00-17:00
 - **Location:** Buchelius Room 6.18, University Library, Utrecht Science Park
-- **Demo/Presentation:** Creating your own Python and R packages
+- **Demo/Presentation:** High Performance Computing and Parallel programming
 
-<a href='https://www.uu.nl/en/node/133008/ics' download="Programming-Cafe">
-<button type="button" class="btn btn-primary btn-sm">Add March edition to calendar</button>
+<a href='https://www.uu.nl/en/node/133010/ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add April edition to calendar</button>
 </a>
 
 :::
