--- a/site/agenda.qmd
+++ b/site/agenda.qmd
@@ -3,27 +3,13 @@
 :::
 
 ::: {.callout-note icon=false}
-## Programming Cafe March 2024
-
-- **Date:** Thursday, 7th March
-- **Time:** 15:00-17:00
-- **Location:** Bucheliuszaal 6.18, University Library (Utrecht Science Park)
-- **Demo/Presentation:** [Creating your own Python and R packages (by Raoul Schram and Jelle Treep)](https://utrechtuniversity.github.io/programming-cafe-presentations/presentations/2024-03-07_packaging/intro-slides.html)
-- If you are working with Python and R, undoubtedly you will have used packages (e.g. numpy, pandas, ggplot2 or tidyr). But did you know you can create your own packages? And did you know that this is not so difficult and often a good idea? In this programming cafe we discuss what a package is, when and why it is a good idea to create a packages, how to create a package and some best practices when creating packages. We will also have small tutorials for creating a simple package in R and Python yourself in the second hour of the programming cafe and experts in the room to help you!
-
-<a href='https://www.uu.nl/en/node/133008/ics' download="Programming-Cafe">
-<button type="button" class="btn btn-primary btn-sm">Add March edition to calendar</button>
-</a>
-
-:::
-
-::: {.callout-note icon=false}
 ## Programming Cafe April 2024
 
 - **Date:** Thursday, 4th April
 - **Time:** 15:00-17:00
 - **Location:** Bucheliuszaal 6.18, University Library (Utrecht Science Park)
-- **Demo/Presentation:** tbd
+- **Demo/Presentation:** HPC and parallel programming
+- Do you want to perform many calculations or large analyses that would take very long on your own laptop? High Performance Computing  (HPC) platforms provide compute power that might help to speed up your calculations or to increase your problem size (e.g. simulations at finer resolution, or exploring more parameter combinations). In this Programming Cafe Lukas van de Wiel, scientific programmer in Earth Sciences, will introduce us in the concepts of writing parallel code for HPC. As always we will prepare some hands on exercises so you can practice writing some parallel code yourself!
 
 <a href='https://www.uu.nl/en/node/133010/ics' download="Programming-Cafe">
 <button type="button" class="btn btn-primary btn-sm">Add April edition to calendar</button>
@@ -45,9 +31,46 @@
 
 :::
 
+::: {.callout-note icon=false}
 
+## Programming Cafe June 2024 (@Faculty of Science)
+
+- **Date:** Thursday, 6th June
+- **Time:** 15:00-17:00
+- **Location:** Buys Ballotgebouw 1.69, Utrecht Science Park
+- **Demo/Presentation: TBD** 
+- This edition is hosted at the faculty of Science, however everyone is welcome as always!
+
+<a href='https://www.uu.nl/en/node/138938/ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add June edition to calendar</button>
+</a>
+
+:::
+
+::: {.callout-note icon=false}
+
+## Programming Cafe July 2024
+
+- **Date:** Thursday, 4th July
+- **Time:** 15:00-17:00
+- **Location:** Bucheliuszaal 6.18, University Library (Utrecht Science Park)
+- **Demo/Presentation:** tbd
+
+<a href='https://www.uu.nl/en/node/138939/ics' download="Programming-Cafe">
+<button type="button" class="btn btn-primary btn-sm">Add July edition to calendar</button>
+</a>
+
+:::
 
 ## Past Programming Cafes
+
+### Programming Cafe March 2024
+
+- **Date:** Thursday, 7th March
+- **Time:** 15:00-17:00
+- **Location:** Bucheliuszaal 6.18, University Library (Utrecht Science Park)
+- **Demo/Presentation:** [Creating your own Python and R packages (by Raoul Schram and Jelle Treep)](https://utrechtuniversity.github.io/programming-cafe-presentations/presentations/2024-03-07_packaging/intro-slides.html)
+- If you are working with Python and R, undoubtedly you will have used packages (e.g. numpy, pandas, ggplot2 or tidyr). But did you know you can create your own packages? And did you know that this is not so difficult and often a good idea? In this programming cafe we discuss what a package is, when and why it is a good idea to create a packages, how to create a package and some best practices when creating packages. We will also have small tutorials for creating a simple package in R and Python yourself in the second hour of the programming cafe and experts in the room to help you!
 
 ### Programming Cafe February 2024
 
